--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,10 +36,20 @@ jobs:
         export DISPLAY=:99
         chromedriver --url-base=/wd/hub &
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional, disables headless mode
+ 
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         
+ 
     - name: Run Tests
       run: python -m main.py --junitxml=report.xml
 #       run: pipenv run python main.py test functional_tests.tests.test_selenium.test_exams -v 2
+
 
     - name: Archive Test Results
       uses: actions/upload-artifact@v2
