--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,12 +26,18 @@ jobs:
     - name: Prepare Selenium
       # https://github.com/marketplace/actions/setup-chromedriver
       uses: nanasess/setup-chromedriver@master
-    - name: Launch browser
+      
+    - name: Install Google Chrome Using Shell Script
       run: |
-        google-chrome --version
-        export DISPLAY=:99
-        chromedriver --url-base=/wd/hub &
-        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional, disables headless mode
+       chmod +x ./scripts/InstallChrome.sh
+        ./myScripts/InstallChrome.sh  
+      
+#     - name: Launch browser
+#       run: |
+#         google-chrome --version
+#         export DISPLAY=:99
+#         chromedriver --url-base=/wd/hub &
+#         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional, disables headless mode
  
     - name: Lint with flake8
       run: |
