--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
       
     - name: Install Google Chrome Using Shell Script
       run: |
-       chmod +x ./scripts/InstallChrome.sh
+       chmod +x ./myScripts/InstallChrome.sh
         ./myScripts/InstallChrome.sh  
       
 #     - name: Launch browser
