--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,16 +19,22 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pipenv
-        pipenv install
         pip install -r requirements.txt
+#        pip install pipenv
+#        pipenv install
+
         
-    - name: Set Up Chromedriver    
+    - name: Install Chrome and Firefox    
       run: |
-        sudo apt-get update
-        sudo apt-get --only-upgrade install google-chrome-stable
-        sudo apt-get -yqq install chromium-chromedriver
-      
+        sudo apt install google-chrome-stable
+#        sudo apt-get install firefox
+
+    - name: Install chromedriver and geckodriver (Firefox Webdriver)
+      run: |
+        seleniumbase install chromedriver
+#        seleniumbase install geckodriver
+
+
 #     - name: Launch browser
 #       run: |
 #         google-chrome --version
