--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,9 +29,9 @@ jobs:
         sudo apt install google-chrome-stable
 #        sudo apt-get install firefox
 
-    - name: Install chromedriver and geckodriver (Firefox Webdriver)
-      run: |
-        seleniumbase install chromedriver
+#     - name: Install chromedriver and geckodriver (Firefox Webdriver)
+#       run: |
+#         seleniumbase install chromedriver
 #        seleniumbase install geckodriver
 
 
