--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,12 +29,6 @@ jobs:
         sudo apt install google-chrome-stable
 #        sudo apt-get install firefox
 
-#     - name: Install chromedriver and geckodriver (Firefox Webdriver)
-#       run: |
-#         seleniumbase install chromedriver
-#        seleniumbase install geckodriver
-
-
 #     - name: Launch browser
 #       run: |
 #         google-chrome --version
@@ -50,6 +44,14 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         
+    - name: Launch browser
+      run: |
+        google-chrome --version
+        export DISPLAY=:99
+        chromedriver --url-base=/wd/hub &
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1    # optional, disables headless mode
+ 
+ 
  
     - name: Run Tests
       run: python main.py
