--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,14 +27,10 @@ jobs:
     - name: Install Chrome and Firefox    
       run: |
         sudo apt install google-chrome-stable
+        sudo apt-get install x11vnc xvfb fluxbox
+
 #        sudo apt-get install firefox
 
-#     - name: Launch browser
-#       run: |
-#         google-chrome --version
-#         export DISPLAY=:99
-#         chromedriver --url-base=/wd/hub &
-#         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional, disables headless mode
  
     - name: Lint with flake8
       run: |
@@ -43,6 +39,8 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        
+        
         
     - name: Launch browser
       run: |
