--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,30 +7,22 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+      
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-#        pip install pipenv
-#        pipenv install
-
         
     - name: Install Chrome and Firefox    
       run: |
         sudo apt install google-chrome-stable
-        sudo apt-get install x11vnc xvfb fluxbox
-
-#        sudo apt-get install firefox
-
  
     - name: Lint with flake8
       run: |
@@ -40,21 +32,9 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         
-        
-        
-    - name: Launch browser
-      run: |
-        google-chrome --version
-        export DISPLAY=:99
-        chromedriver --url-base=/wd/hub &
-        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1    # optional, disables headless mode
- 
- 
- 
-    - name: Run Tests
+    - name: Run Automation Tests
       run: python main.py
 #       run: pipenv run python main.py test functional_tests.tests.test_selenium.test_exams -v 2
-
 
     - name: Archive Test Results
       uses: actions/upload-artifact@v2
