--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,13 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
+    
+        # The type of runner that the job will run on
+    runs-on: ${{ matrix.os-path }}
+    strategy:
+      matrix:
+        os-path: ['ubuntu-latest','macos-latest','windows-latest']    
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
