--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,7 +20,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Install Chrome and Firefox    
+    - name: Install Chrome    
       run: |
         sudo apt install google-chrome-stable
  
@@ -41,3 +41,6 @@ jobs:
       with:
         name: test-reports
         path: Logs/*.*
+
+    - name: Archive Test Results
+      run: ls -a
