--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,9 +46,9 @@ jobs:
       run: |
         ls -a
         cd Logs
-        echo "Files in Logs folder"
+        echo "Files in \"Logs\" folder"
         ls
-        echo "Content of \"automation.log file\" "
+        echo "Content of \"automation.log\" file "
         cat automation.log
       
       
