--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,3 +1,4 @@
+ 
 name: Python application
 on:
   push:
@@ -6,8 +7,8 @@ on:
     branches: [ master ]
 
 jobs:
-  test: 
-    runs-on: ubuntu-latest    
+  test:
+    runs-on: ubuntu-latest          
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -41,3 +42,12 @@ jobs:
       with:
         name: test-reports
         path: Logs/*.*
+
+    - name: List current directory
+      run: |
+        ls -a
+        cd Logs
+        echo "Files in \"Logs\" folder"
+        ls
+        echo "Content of \"automation.log\" file "
+        cat automation.log
